tests/ui/abi3_weakref.stderr
error: `weakref` requires >= python 3.9 with the `abi3` feature
 --> tests/ui/abi3_weakref.rs:4:11
  |
4 | #[pyclass(weakref)]
  |           ^^^^^^^
